[package]
name = "prelancr"
version = "0.1.0"
edition = "2021"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
    "substrate-wasm-builder"
]
